--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "author": "Sibin Xavier <sibinx7@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap": "4.0.0-beta",
     "font-awesome": "^4.7.0",
+    "gulp-plumber": "false1.1.0",
     "jquery": "2.1.4"
-	},
-	"devDependencies": {
+  },
+  "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
