Add foundation site

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-beta",
     "font-awesome": "^4.7.0",
+    "foundation-sites": "false6.4.3",
     "gulp-plumber": "false1.1.0",
     "jquery": "2.1.4"
   },
