--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "bootstrap": "4.0.0-beta",
     "font-awesome": "^4.7.0",
-    "foundation-sites": "false6.4.3",
-    "gulp-plumber": "false1.1.0",
-    "gulp-postcss": "false7.0.0",
-    "jquery": "2.1.4"
+    "foundation-sites": "6.4.3",
+    "gulp-plumber": "1.1.0",
+    "gulp-postcss": "7.0.0",
+    "jquery": "2.1.4",
+    "popper.js": "^1.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -21,6 +22,7 @@
     "babel-preset-latest": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
+    "dotenv": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-browserify": "^0.5.1",
