--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "popper.js": "^1.11.0"
   },
   "devDependencies": {
+    "autoprefixer": "false7.1.4",
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
+    "cssnano": "false3.10.0",
     "dotenv": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
