--- a/package.json
+++ b/package.json
@@ -10,25 +10,29 @@
     "bootstrap": "4.0.0-beta",
     "font-awesome": "^4.7.0",
     "foundation-sites": "6.4.3",
-    "gulp-plumber": "1.1.0",
-    "gulp-postcss": "7.0.0",
+    "highcharts": "false6.0.1",
     "jquery": "2.1.4",
-    "popper.js": "^1.11.0"
+    "popper.js": "^1.11.0",
+    "slick-carousel": "1.8.1"
   },
   "devDependencies": {
-    "autoprefixer": "false7.1.4",
+    "autoprefixer": "7.1.4",
     "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.5.2",
+    "babel-core": "6.26.0",
+    "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "6.24.1",
     "babel-preset-latest": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
-    "cssnano": "false3.10.0",
+    "cssnano": "3.10.0",
     "dotenv": "^4.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "7.0.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
+    "gulp-plumber": "1.1.0",
+    "gulp-postcss": "7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-typescript": "^3.1.7",
