Add new plugins, add dropzone

--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "4.0.0-beta",
+    "dropzone": "^5.2.0",
     "font-awesome": "^4.7.0",
-    "foundation-sites": "6.4.3",
+    "foundation-sites": "6.4.4-rc1",
     "highcharts": "false6.0.1",
-    "jquery": "2.1.4",
+    "jquery": "3.2.1",
     "jquery-slimscroll": "false1.3.8",
-    "popper.js": "^1.11.0",
+    "popper.js": "^1.12.6",
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {
-    "autoprefixer": "7.1.4",
-    "babel-cli": "^6.24.1",
+    "autoprefixer": "7.1.6",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
-    "babel-preset-env": "1.6.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "6.24.1",
     "babel-preset-latest": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
+    "babelify": "^8.0.0",
+    "browserify": "^14.5.0",
     "cssnano": "3.10.0",
     "dotenv": "^4.0.0",
     "gulp": "^3.9.1",
@@ -33,12 +34,15 @@
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
     "gulp-plumber": "1.1.0",
-    "gulp-postcss": "7.0.0",
+    "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-typescript": "^3.1.7",
+    "gulp-typescript": "^3.2.3",
     "gulp-uglify": "^3.0.0",
-    "typescript": "^2.3.4",
+    "install": "false0.10.1",
+    "postcss": "^6.0.13",
+    "postcss-color-function": "false4.0.0",
+    "typescript": "^2.6.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
