POST css implementation

--- a/package.json
+++ b/package.json
@@ -37,11 +37,21 @@
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "false2.6.1",
     "gulp-typescript": "^3.2.3",
     "gulp-uglify": "^3.0.0",
     "install": "false0.10.1",
-    "postcss": "^6.0.14",
+    "postcss": "false6.0.14",
+    "postcss-apply": "false0.8.0",
+    "postcss-calc": "false6.0.1",
     "postcss-color-function": "false4.0.0",
+    "postcss-custom-media": "false6.0.0",
+    "postcss-custom-properties": "false6.2.0",
+    "postcss-extend": "false1.0.5",
+    "postcss-media-minmax": "false3.0.0",
+    "postcss-nesting": "false4.2.1",
+    "postcss-scss": "false1.0.2",
+    "precss": "false2.0.0",
     "typescript": "^2.6.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
