update packages, fix file issues

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "author": "Sibin Xavier <sibinx7@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "4.0.0-beta.2",
     "dropzone": "^5.2.0",
     "font-awesome": "^4.7.0",
     "foundation-sites": "6.4.4-rc1",
-    "highcharts": "false6.0.1",
+    "highcharts": ".0.1",
     "jquery": "3.2.1",
-    "jquery-slimscroll": "false1.3.8",
-    "popper.js": "^1.12.6",
+    "jquery-slimscroll": "1.3.8",
+    "popper.js": "^1.12.9",
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {
@@ -37,22 +37,22 @@
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "false2.6.1",
+    "gulp-sourcemaps": "2.6.1",
     "gulp-typescript": "^3.2.3",
     "gulp-uglify": "^3.0.0",
-    "install": "false0.10.1",
-    "postcss": "false6.0.14",
-    "postcss-apply": "false0.8.0",
-    "postcss-calc": "false6.0.1",
-    "postcss-color-function": "false4.0.0",
-    "postcss-custom-media": "false6.0.0",
-    "postcss-custom-properties": "false6.2.0",
-    "postcss-extend": "false1.0.5",
-    "postcss-media-minmax": "false3.0.0",
-    "postcss-nesting": "false4.2.1",
-    "postcss-scss": "false1.0.2",
-    "precss": "false2.0.0",
-    "typescript": "^2.6.1",
+    "install": "^0.10.2",
+    "postcss": "6.0.14",
+    "postcss-apply": "0.8.0",
+    "postcss-calc": "6.0.1",
+    "postcss-color-function": "4.0.1",
+    "postcss-custom-media": "6.0.0",
+    "postcss-custom-properties": "6.2.0",
+    "postcss-extend": "1.0.5",
+    "postcss-media-minmax": "3.0.0",
+    "postcss-nesting": "4.2.1",
+    "postcss-scss": "1.0.2",
+    "precss": "2.0.0",
+    "typescript": "^2.6.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
