--- a/package.json
+++ b/package.json
@@ -7,53 +7,53 @@
   "author": "Sibin Xavier <sibinx7@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "4.0.0-beta.2",
-    "dropzone": "^5.2.0",
+    "bootstrap": "4.1.1",
+    "dropzone": "^5.4.0",
     "font-awesome": "^4.7.0",
     "foundation-sites": "6.4.4-rc1",
     "highcharts": ".0.1",
-    "jquery": "3.2.1",
+    "jquery": "3.3.1",
     "jquery-slimscroll": "1.3.8",
-    "popper.js": "^1.12.9",
+    "popper.js": "^1.14.3",
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {
-    "autoprefixer": "7.1.6",
+    "autoprefixer": "8.6.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "6.26.0",
-    "babel-preset-env": "1.6.1",
+    "babel-core": "6.26.3",
+    "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "6.24.1",
     "babel-preset-latest": "^6.24.1",
     "babelify": "^8.0.0",
-    "browserify": "^14.5.0",
+    "browserify": "^16.2.2",
     "cssnano": "3.10.0",
-    "dotenv": "^4.0.0",
+    "dotenv": "^6.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "7.0.0",
+    "gulp-babel": "7.0.1",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
-    "gulp-plumber": "1.1.0",
-    "gulp-postcss": "^7.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "2.6.1",
-    "gulp-typescript": "^3.2.3",
+    "gulp-plumber": "1.2.0",
+    "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.2.3",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "2.6.4",
+    "gulp-typescript": "^4.0.2",
     "gulp-uglify": "^3.0.0",
-    "install": "^0.10.2",
-    "postcss": "6.0.14",
-    "postcss-apply": "0.8.0",
+    "install": "^0.11.0",
+    "postcss": "6.0.22",
+    "postcss-apply": "0.10.0",
     "postcss-calc": "6.0.1",
     "postcss-color-function": "4.0.1",
     "postcss-custom-media": "6.0.0",
-    "postcss-custom-properties": "6.2.0",
+    "postcss-custom-properties": "7.0.0",
     "postcss-extend": "1.0.5",
     "postcss-media-minmax": "3.0.0",
-    "postcss-nesting": "4.2.1",
-    "postcss-scss": "1.0.2",
-    "precss": "2.0.0",
-    "typescript": "^2.6.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "postcss-nesting": "5.0.0",
+    "postcss-scss": "1.0.5",
+    "precss": "3.1.2",
+    "typescript": "^2.9.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
