--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss-media-minmax": "3.0.0",
     "postcss-nesting": "5.0.0",
     "postcss-scss": "1.0.5",
+    "postcss-simple-vars":"4.1.0",
     "precss": "3.1.2",
     "typescript": "^2.9.1",
     "vinyl-buffer": "^1.0.1",
