--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "3.3.1",
     "jquery-slimscroll": "1.3.8",
     "popper.js": "^1.14.3",
+    "react": "^16.4.0",
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "6.24.1",
     "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "cssnano": "3.10.0",
@@ -51,7 +53,7 @@
     "postcss-media-minmax": "3.0.0",
     "postcss-nesting": "5.0.0",
     "postcss-scss": "1.0.5",
-    "postcss-simple-vars":"4.1.0",
+    "postcss-simple-vars": "4.1.0",
     "precss": "3.1.2",
     "typescript": "^2.9.1",
     "vinyl-buffer": "^1.0.1",
