--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "author": "Sibin Xavier <sibinx7@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "4.1.1",
-    "dropzone": "^5.4.0",
+    "bootstrap": "4.1.3",
+    "dropzone": "^5.5.1",
     "font-awesome": "^4.7.0",
-    "foundation-sites": "6.4.4-rc1",
-    "highcharts": ".0.1",
+    "foundation-sites": "6.5.0-rc.2",
+    "highcharts": "6.1.1",
     "jquery": "3.3.1",
     "jquery-slimscroll": "1.3.8",
-    "popper.js": "^1.14.3",
-    "react": "^16.4.0",
+    "popper.js": "^1.14.4",
+    "react": "^16.4.2",
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {
-    "autoprefixer": "8.6.0",
+    "autoprefixer": "9.1.3",
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.3",
     "babel-preset-env": "1.7.0",
@@ -29,33 +29,33 @@
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
-    "cssnano": "3.10.0",
+    "cssnano": "4.1.0",
     "dotenv": "^6.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "7.0.1",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
     "gulp-plumber": "1.2.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-rename": "^1.2.3",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "2.6.4",
-    "gulp-typescript": "^4.0.2",
-    "gulp-uglify": "^3.0.0",
-    "install": "^0.11.0",
-    "postcss": "6.0.22",
-    "postcss-apply": "0.10.0",
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "gulp-uglify": "^3.0.1",
+    "install": "^0.12.1",
+    "postcss": "7.0.2",
+    "postcss-apply": "0.11.0",
     "postcss-calc": "6.0.1",
     "postcss-color-function": "4.0.1",
     "postcss-custom-media": "6.0.0",
     "postcss-custom-properties": "7.0.0",
     "postcss-extend": "1.0.5",
     "postcss-media-minmax": "3.0.0",
-    "postcss-nesting": "5.0.0",
-    "postcss-scss": "1.0.5",
+    "postcss-nesting": "6.0.0",
+    "postcss-scss": "2.0.0",
     "postcss-simple-vars": "4.1.0",
     "precss": "3.1.2",
-    "typescript": "^2.9.1",
+    "typescript": "^3.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   }
