--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "Sibin Xavier <sibinx7@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "bootstrap": "4.1.3",
     "dropzone": "^5.5.1",
-    "font-awesome": "^4.7.0",
     "foundation-sites": "6.5.0-rc.2",
     "highcharts": "6.1.1",
     "jquery": "3.3.1",
