--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "autoprefixer": "9.2.1",
     "babel-cli": "^6.26.0",
-    "babel-core": "6.26.3",
+    "babel-core": "^6.26.3",
     "babel-preset-env": "1.7.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -30,7 +32,7 @@
     "cssnano": "4.1.5",
     "dotenv": "^6.1.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "8.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
     "gulp-plumber": "1.2.0",
