--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
   "author": "Sibin Xavier <sibinx7@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.4.1",
-    "bootstrap": "4.1.3",
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "bootstrap": "4.2.1",
     "dropzone": "^5.5.1",
-    "foundation-sites": "6.5.0-rc.4",
-    "highcharts": "6.2.0",
+    "foundation-sites": "6.5.1",
+    "highcharts": "7.0.2",
     "jquery": "3.3.1",
     "jquery-slimscroll": "1.3.8",
-    "popper.js": "^1.14.4",
-    "react": "^16.5.2",
+    "popper.js": "^1.14.6",
+    "react": "^16.7.0",
     "slick-carousel": "1.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "9.2.1",
+    "autoprefixer": "9.4.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "1.7.0",
@@ -30,34 +30,34 @@
     "babel-preset-react": "^6.24.1",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
-    "cssnano": "4.1.5",
-    "dotenv": "^6.1.0",
-    "gulp": "^3.9.1",
+    "cssnano": "4.1.8",
+    "dotenv": "^6.2.0",
+    "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.1",
-    "gulp-plumber": "1.2.0",
+    "gulp-plumber": "1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-variables": "^1.2.0",
     "gulp-sourcemaps": "2.6.4",
-    "gulp-typescript": "^5.0.0-alpha.3",
+    "gulp-typescript": "^5.0.0",
     "gulp-uglify": "^3.0.1",
     "install": "^0.12.2",
-    "postcss": "7.0.5",
+    "postcss": "7.0.13",
     "postcss-apply": "0.11.0",
-    "postcss-calc": "7.0.0",
+    "postcss-calc": "7.0.1",
     "postcss-color-function": "4.0.1",
-    "postcss-custom-media": "7.0.6",
-    "postcss-custom-properties": "8.0.8",
+    "postcss-custom-media": "7.0.7",
+    "postcss-custom-properties": "8.0.9",
     "postcss-extend": "1.0.5",
     "postcss-media-minmax": "4.0.0",
     "postcss-nesting": "7.0.0",
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.1",
-    "precss": "3.1.2",
-    "typescript": "^3.1.3",
+    "precss": "4.0.0",
+    "typescript": "^3.2.4",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   }
